--- a/Digitalizador.csproj
+++ b/Digitalizador.csproj
@@ -128,6 +128,12 @@
     <Compile Include="frmRegCand.Designer.cs">
       <DependentUpon>frmRegCand.cs</DependentUpon>
     </Compile>
+    <Compile Include="Hilos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Hilos.Designer.cs">
+      <DependentUpon>Hilos.cs</DependentUpon>
+    </Compile>
     <Compile Include="LeerQR.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -158,6 +164,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmRegCand.resx">
       <DependentUpon>frmRegCand.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Hilos.resx">
+      <DependentUpon>Hilos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LeerQR.resx">
       <DependentUpon>LeerQR.cs</DependentUpon>
