--- a/Digitalizador.csproj
+++ b/Digitalizador.csproj
@@ -184,6 +184,12 @@
     <Compile Include="login.Designer.cs">
       <DependentUpon>login.cs</DependentUpon>
     </Compile>
+    <Compile Include="MonitoreoFilesDirectorio.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MonitoreoFilesDirectorio.Designer.cs">
+      <DependentUpon>MonitoreoFilesDirectorio.cs</DependentUpon>
+    </Compile>
     <Compile Include="Persistence\DBContext.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -214,6 +220,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="login.resx">
       <DependentUpon>login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MonitoreoFilesDirectorio.resx">
+      <DependentUpon>MonitoreoFilesDirectorio.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
