--- a/Digitalizador.csproj
+++ b/Digitalizador.csproj
@@ -121,6 +121,7 @@
       <HintPath>packages\System.Runtime.CompilerServices.Unsafe.4.5.2\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
     <Reference Include="System.Runtime.InteropServices" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -141,6 +142,12 @@
   <ItemGroup>
     <Compile Include="ClasesGenericas.cs" />
     <Compile Include="Conexion.cs" />
+    <Compile Include="crud_pdf.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="crud_pdf.Designer.cs">
+      <DependentUpon>crud_pdf.cs</DependentUpon>
+    </Compile>
     <Compile Include="Entity\RutasArchivosDigitalizador.cs" />
     <Compile Include="ConsumirServicios.cs">
       <SubType>Form</SubType>
@@ -202,6 +209,9 @@
     <Compile Include="Service\RutasArchivosDigitalizadorService.cs" />
     <EmbeddedResource Include="ConsumirServicios.resx">
       <DependentUpon>ConsumirServicios.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="crud_pdf.resx">
+      <DependentUpon>crud_pdf.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmConfiguracion.resx">
       <DependentUpon>frmConfiguracion.cs</DependentUpon>
