--- a/Digitalizador.csproj
+++ b/Digitalizador.csproj
@@ -142,12 +142,14 @@
   <ItemGroup>
     <Compile Include="ClasesGenericas.cs" />
     <Compile Include="Conexion.cs" />
+    <Compile Include="convert.cs" />
     <Compile Include="crud_pdf.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="crud_pdf.Designer.cs">
       <DependentUpon>crud_pdf.cs</DependentUpon>
     </Compile>
+    <Compile Include="entities.cs" />
     <Compile Include="Entity\RutasArchivosDigitalizador.cs" />
     <Compile Include="ConsumirServicios.cs">
       <SubType>Form</SubType>
@@ -206,6 +208,7 @@
     <Compile Include="RecortarImagenes.Designer.cs">
       <DependentUpon>RecortarImagenes.cs</DependentUpon>
     </Compile>
+    <Compile Include="rest.cs" />
     <Compile Include="Service\RutasArchivosDigitalizadorService.cs" />
     <EmbeddedResource Include="ConsumirServicios.resx">
       <DependentUpon>ConsumirServicios.cs</DependentUpon>
