se modifican todos los archivos para que se ingresen los datos a la db de sqlite en lugar del AppConfig

--- a/App.config
+++ b/App.config
@@ -4,9 +4,9 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
     <connectionStrings>
-        <add name="PruebasLocal" connectionString="Data Source=localhost\sqlexpress;Initial Catalog=sige2021_dev;uid=sa;password=123" providerName="System.Data.SqlClient" />
-        <add name="Pruebas" connectionString="Data Source=192.168.74.52;Initial Catalog=sige2021_dev;uid=iepcdev;password=Klaatu2021" providerName="System.Data.SqlClient" />
-        <add name="Productivo" connectionString="Data Source=192.168.74.52;Initial Catalog=sige2021;uid=sige2021;password=Klaatu*21" providerName="System.Data.SqlClient" />
+        <add name="pruebasLocal" connectionString="Data Source=localhost\sqlexpress;Initial Catalog=sige2021_dev;uid=sa;password=123" providerName="System.Data.SqlClient" />
+        <add name="pruebas" connectionString="Data Source=192.168.74.52;Initial Catalog=sige2021_dev;uid=iepcdev;password=Klaatu2021" providerName="System.Data.SqlClient" />
+        <add name="productivo" connectionString="Data Source=192.168.74.52;Initial Catalog=sige2021;uid=sige2021;password=Klaatu*21" providerName="System.Data.SqlClient" />
     </connectionStrings>
     <appSettings>
         <add key="entorno" value="" />
