--- a/packages.config
+++ b/packages.config
@@ -14,6 +14,11 @@
   <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.6" targetFramework="net48" requireReinstallation="true" />
   <package id="SQLitePCLRaw.provider.e_sqlite3" version="2.0.6" targetFramework="net48" requireReinstallation="true" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.115.5" targetFramework="net46" />
+  <package id="Syncfusion.Compression.Base" version="19.3.0.56" targetFramework="net46" />
+  <package id="Syncfusion.Licensing" version="19.3.0.56" targetFramework="net46" />
+  <package id="Syncfusion.Pdf.WinForms" version="19.3.0.56" targetFramework="net46" />
+  <package id="Syncfusion.PdfViewer.Windows" version="19.3.0.56" targetFramework="net46" />
+  <package id="Syncfusion.Shared.Base" version="19.3.0.56" targetFramework="net46" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net48" requireReinstallation="true" />
   <package id="System.Data.SQLite.Core" version="1.0.115.5" targetFramework="net46" />
   <package id="System.Memory" version="4.5.3" targetFramework="net48" requireReinstallation="true" />
