Se agrega formulario de actas y funcion de compression de pdf

--- a/packages.config
+++ b/packages.config
@@ -8,6 +8,7 @@
   <package id="Microsoft.NETFramework.ReferenceAssemblies.net48" version="1.0.2" targetFramework="net461" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net46" />
   <package id="NuGet.CommandLine" version="5.11.0" targetFramework="net48" developmentDependency="true" requireReinstallation="true" />
+  <package id="PDFsharp" version="1.50.5147" targetFramework="net46" />
   <package id="SQLitePCL" version="3.8.7.2" targetFramework="net46" />
   <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.0.6" targetFramework="net48" requireReinstallation="true" />
   <package id="SQLitePCLRaw.core" version="2.0.6" targetFramework="net48" requireReinstallation="true" />
